--- a/man/man1/manta-hk.1
+++ b/man/man1/manta-hk.1
@@ -14,6 +14,8 @@ manta\-hk dircount\-audit launch [\-\-date DATE]
 manta\-hk dircount\-audit list 
 .PP
 manta\-hk dircount\-audit report JOBID
+.PP
+manta\-hk dircount\-audit genfix JOBID
 .SH DESCRIPTION
 .PP
 Manta housekeeping operations comprise a pipeline that starts with daily
@@ -44,13 +46,16 @@ regularly by Manta and reports for a given date range which reports are missing
 or may be incomplete.
 .PP
 The "dircount\-audit" subcommands allows operators to launch, list, and summarize
-the results of jobs used to audit directory counts.  As a result of previous
-software defects, directory counts in the metadata tier could become incorrect.
-The "dircount\-audit launch" subcommand locates database backups for the given
-day and launches jobs on these objects that compare the actual and reported
-directory counts.  The "dircount\-audit list" subcommand lists running or
-recently\-run jobs started with "dircount\-audit launch".  The "dircount\-audit
-report" subcommand summarizes the results.
+the results of jobs used to audit directory counts and to generate commands to
+repair these counts.  As a result of previous software defects, directory counts
+in the metadata tier could become incorrect.  The "dircount\-audit launch"
+subcommand locates database backups for the given day and launches jobs on these
+objects that compare the actual and reported directory counts.  The
+"dircount\-audit list" subcommand lists running or recently\-run jobs started with
+"dircount\-audit launch".  The "dircount\-audit report" subcommand summarizes the
+results.  The "dircount\-audit genfix" subcommand generates SQL commands to
+repair incorrect directory counts.  For more, see "Directory count audit jobs"
+below.
 .PP
 All invocations of this tool use the public interface to Manta to examine data
 stored in Manta itself.  This data is available only to operator accounts.  Some
@@ -59,6 +64,59 @@ invocations of this tool also manage jobs.  The \fB\fCMANTA_URL\fR, \fB\fCMANTA_
 the Manta command\-line tools (e.g., 
 .BR mls (1)) 
 as an operator.
+.SH Directory count audit jobs
+.PP
+The "dircount\-audit report" command reports the number of directories with
+incorrect size counts.  For each directory, there are five possible states:
+.PP
+"count okay"
+.PP
+.RS
+.nf
+The reported (saved) directory count matches the number of entries in
+the directory.  This is only shown when the job was run in verbose
+mode.
+.fi
+.RE
+.PP
+"warn: leaked optimized count"
+.PP
+.RS
+.nf
+There are no entries in the directory (possibly because it does not
+exist), and there's a reported (saved) directory count of 0.  While the
+reported count matches the actual count, there are not supposed to be
+any reported counts of zero.  Counts are supposed to be removed when
+they reach zero.  Thus, the counter for this entry is leaked.
+.fi
+.RE
+.PP
+"error: count mismatch (no optimized count)"
+.PP
+.RS
+.nf
+There are entries in the directory, but the reported count is zero
+because there is no saved count.
+.fi
+.RE
+.PP
+"error: count mismatch (no entries)"
+.PP
+.RS
+.nf
+There are no entries in the directory, but there's a non\-zero reported
+count.
+.fi
+.RE
+.PP
+"error: count mismatch"
+.PP
+.RS
+.nf
+There are entries in the directory, and there is a saved count for
+the directory, but the two counts do not match.
+.fi
+.RE
 .SH OPTIONS
 .TP
 \fB\fC\-d, \-\-date DATE\fR
